--- a/css/all.css
+++ b/css/all.css
@@ -435,8 +435,7 @@ button{
 	border-radius: 50%;
 	text-indent: -9999px;
 	overflow: hidden;
-	visibility: hidden;
-	opacity: 0;
+	display: none;
 }
 .btn-close:before,
 .btn-close:after{
@@ -1890,9 +1889,9 @@ div.cselect .ui-multiselect-checkboxes input[type="radio"] + span:after{ content
 }
 .home-page .main{
 	will-change: transform;
-	-webkit-transform: translate(0, 100%);
-	-ms-transform: translate(0, 100%);
-	transform: translate(0, 100%);
+	/*-webkit-transform: translate(0, 100%);*/
+	/*-ms-transform: translate(0, 100%);*/
+	/*transform: translate(0, 100%);*/
 	-webkit-transition-property: -webkit-transform;
 	transition-property: transform;
 	-webkit-transition-duration: 1s;
@@ -1923,7 +1922,7 @@ div.cselect .ui-multiselect-checkboxes input[type="radio"] + span:after{ content
 }
 .popup-show .sidebar{ z-index: 104; }
 .home-page .sidebar{
-	left: -240px;
+	/*left: -240px;*/
 	will-change: left;
 	-webkit-transition-property: left;
 	transition-property: left;
@@ -2397,7 +2396,7 @@ div.cselect .ui-multiselect-checkboxes input[type="radio"] + span:after{ content
 /*products list*/
 .products__list{
 	padding: 0;
-	margin-left: 1px;
+	margin: 0;
 	font-size: 0;
 	letter-spacing: -4px;
 	box-sizing: border-box;
@@ -2717,6 +2716,38 @@ div.cselect .ui-multiselect-checkboxes input[type="radio"] + span:after{ content
 	margin-top: auto;
 	margin-bottom: auto;
 	background: #fff;
+	-webkit-transition-property: -webkit-transform;
+	transition-property: transform;
+	-webkit-transition-duration: 0.35s;
+	transition-duration: 0.35s;
+}
+.js .video-slider .swiper-slide{
+	-webkit-transform: scale(0.75, 0.75) translate(40%,0);
+	-ms-transform: scale(0.75, 0.75) translate(40%,0);
+	transform: scale(0.75, 0.75) translate(40%,0);
+}
+.js .video-slider .swiper-slide.swiper-slide-next + .swiper-slide{
+	-webkit-transform: scale(0.75, 0.75) translate(-40%,0);
+	-ms-transform: scale(0.75, 0.75) translate(-40%,0);
+	transform: scale(0.75, 0.75) translate(-40%,0);
+}
+.js .video-slider .swiper-slide.swiper-slide-prev{
+	-webkit-transform: scale(0.85, 0.85) translate(10%,0);
+	-ms-transform: scale(0.85, 0.85) translate(10%,0);
+	transform: scale(0.85, 0.85) translate(10%,0);
+	z-index: 2;
+}
+.js .video-slider .swiper-slide.swiper-slide-next{
+	-webkit-transform: scale(0.85, 0.85) translate(-10%,0);
+	-ms-transform: scale(0.85, 0.85) translate(-10%,0);
+	transform: scale(0.85, 0.85) translate(-10%,0);
+	z-index: 2;
+}
+.js .video-slider .swiper-slide.swiper-slide-active {
+	-webkit-transform: scale(1, 1) translate(0,0);
+	-ms-transform: scale(1, 1) translate(0,0);
+	transform: scale(1, 1) translate(0,0);
+	z-index: 3;
 }
 .video-slider .swiper-holder{
 	position: relative;
